Fix HTML errors

--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/styles.css">
-    <title>Welcome To Tutor</title>
+    <title>(HJ) Welcome To Tutor (HJ)</title>
 </head>
 <body>
     <nav class="navbar">
@@ -154,62 +154,60 @@
                 <div class="topic-text">
                 <h3>Plan Layout And Design Elements</h3>
                 </div>
-            </div>
-            <div class="topic">
+                <div class="topic">
                 <div class="topic-image">
                 <img src="images/description-3.jpg" alt="alternative" />
                 </div>
                 <div class="topic-text">
                 <h3>Sketch Creative Concepts</h3>
                 </div>
-            </div>
-            <div class="topic">
+                <div class="topic">
                 <div class="topic-image">
                 <img src="images/description-4.jpg" alt="alternative" />
                 </div>
                 <div class="topic-text">
                 <h3>Establish Strong Call-to-Actions</h3>
                 </div>
-            </div>
-            <div class="topic">
-                <div class="topic-image">
-                <img src="images/description-5.jpg" alt="alternative" />
+                <div class="topic">
+                    <div class="topic-image">
+                    <img src="images/description-5.jpg" alt="alternative" />
+                    </div>
+                    <div class="topic-text">
+                    <h3>Choose High-Quality HTML Templates</h3>
+                    </div>
                 </div>
-                <div class="topic-text">
-                <h3>Choose High-Quality HTML Templates</h3>
+                <div class="topic">
+                    <div class="topic-image">
+                    <img src="images/description-6.jpg" alt="alternative" />
+                    </div>
+                    <div class="topic-text">
+                    <h3>Create Impressive Layout Previews</h3>
+                    </div>
                 </div>
-            </div>
-            <div class="topic">
-                <div class="topic-image">
-                <img src="images/description-6.jpg" alt="alternative" />
+                <div class="topic">
+                    <div class="topic-image">
+                    <img src="images/description-7.jpg" alt="alternative" />
+                    </div>
+                    <div class="topic-text">
+                    <h3>Master Landing Page Coding Techniques</h3>
+                    </div>
                 </div>
-                <div class="topic-text">
-                <h3>Create Impressive Layout Previews</h3>
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="images/description-8.jpg" alt="alternative" />
+                    </div>
+                    <div class="topic-text">
+                        <h3>Launch Your Project Successfully Online</h3>
+                    </div>
                 </div>
-            </div>
-            <div class="topic">
-                <div class="topic-image">
-                <img src="images/description-7.jpg" alt="alternative" />
-                </div>
-                <div class="topic-text">
-                <h3>Master Landing Page Coding Techniques</h3>
-                </div>
-            </div>
-            <div class="topic">
-                <div class="topic-image">
-                <img src="images/description-8.jpg" alt="alternative" />
-                </div>
-                <div class="topic-text">
-                <h3>Launch Your Project Successfully Online</h3>
-                </div>
-            </div>
-            </div>
+            </div>         
+        </div>
         </div>
       </section>
 
       <!-- Course Chapter Section -->
       <section class="chapters section" id="chapters">
-        <div class="container">
+        <div class="container" >
             <div class="section-header">
                 <h2>Main Course Chapters</h2>
                 <div class="heading-border"></div>
@@ -219,30 +217,33 @@
                     video creation.
                 </p>
             </div>
-            <div class="card">
-                <img src="images/chapters-icon-1.svg" alt="chapter 1">
-                <h3>Setting Clear Objectives</h3>
-                <p>
-                    Learn how to define clear objectives and goals for your video 
-                    projects, ensuring focus and direction?
-                </p>
+            <div class="chapter-cards">
+                <div class="card">
+                    <img src="images/chapters-icon-1.svg" alt="chapter 1">
+                    <h3>Setting Clear Objectives</h3>
+                    <p>
+                        Learn how to define clear objectives and goals for your video 
+                        projects, ensuring focus and direction?
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="images/chapters-icon-2.svg" alt="chapter 2">
+                    <h3>Setting Clear Strategies</h3>
+                    <p>
+                        Dive into effective content creation strategies that resonate with 
+                        your audience.
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="images/chapters-icon-3.svg" alt="chapter 3">
+                    <h3>Coding Essentials</h3>
+                    <p>
+                        Explore the fundamental of coding for video projects, including HTML,
+                        CSS, and JavaScript
+                    </p>
+                </div>
             </div>
-            <div class="card">
-                <img src="images/chapters-icon-2.svg" alt="chapter 2">
-                <h3>Setting Clear Strategies</h3>
-                <p>
-                    Dive into effective content creation strategies that resonate with 
-                    your audience.
-                </p>
-            </div>
-            <div class="card">
-                <img src="images/chapters-icon-3.svg" alt="chapter 3">
-                <h3>Coding Essentials</h3>
-                <p>
-                    Explore the fundatmental of coding for video projects, including HTML,
-                    CSS, and JavaScript
-                </p>
-            </div>
+            
         </div>
       </section>
     <script src="js/script.js"></script>
