Complete chapter cards styling

--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
@@ -126,8 +126,8 @@
       </svg>
      </header>
 
-     <!-- Learn Section -->
-      <section class="learn">
+    <!-- Learn Section -->
+    <section class="learn">
         <div class="container">
             <div class="section-header">
                 <h2>What will You Learn</h2>
@@ -143,30 +143,33 @@
                     <div class="topic-image">
                         <img src="images/description-1.jpg" alt="topic">
                     </div>
-                    <div class="topic-next">
+                    <div class="topic-text">
                         <h3>Set Clear Objectives and Goals</h3>
                     </div>
                 </div>
                 <div class="topic">
-                <div class="topic-image">
-                <img src="images/description-2.jpg" alt="alternative" />
-                </div>
-                <div class="topic-text">
-                <h3>Plan Layout And Design Elements</h3>
-                </div>
-                <div class="topic">
-                <div class="topic-image">
-                <img src="images/description-3.jpg" alt="alternative" />
-                </div>
-                <div class="topic-text">
-                <h3>Sketch Creative Concepts</h3>
+                    <div class="topic-image">
+                        <img src="images/description-2.jpg" alt="alternative" />
+                    </div>
+                    <div class="topic-text">
+                        <h3>Plan Layout And Design Elements</h3>
+                    </div>
                 </div>
                 <div class="topic">
-                <div class="topic-image">
-                <img src="images/description-4.jpg" alt="alternative" />
+                    <div class="topic-image">
+                        <img src="images/description-3.jpg" alt="alternative" />
+                    </div>
+                    <div class="topic-text">
+                        <h3>Sketch Creative Concepts</h3>
+                    </div>
                 </div>
-                <div class="topic-text">
-                <h3>Establish Strong Call-to-Actions</h3>
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="images/description-4.jpg" alt="alternative" />
+                    </div>
+                    <div class="topic-text">
+                        <h3>Establish Strong Call-to-Actions</h3>
+                    </div>
                 </div>
                 <div class="topic">
                     <div class="topic-image">
@@ -178,18 +181,18 @@
                 </div>
                 <div class="topic">
                     <div class="topic-image">
-                    <img src="images/description-6.jpg" alt="alternative" />
+                        <img src="images/description-6.jpg" alt="alternative" />
                     </div>
                     <div class="topic-text">
-                    <h3>Create Impressive Layout Previews</h3>
+                        <h3>Create Impressive Layout Previews</h3>
                     </div>
                 </div>
                 <div class="topic">
                     <div class="topic-image">
-                    <img src="images/description-7.jpg" alt="alternative" />
+                        <img src="images/description-7.jpg" alt="alternative" />
                     </div>
                     <div class="topic-text">
-                    <h3>Master Landing Page Coding Techniques</h3>
+                        <h3>Master Landing Page Coding Techniques</h3>
                     </div>
                 </div>
                 <div class="topic">
@@ -202,11 +205,10 @@
                 </div>
             </div>         
         </div>
-        </div>
-      </section>
+    </section>
 
-      <!-- Course Chapter Section -->
-      <section class="chapters section" id="chapters">
+    <!-- Course Chapter Section -->
+    <section class="chapters section" id="chapters">
         <div class="container" >
             <div class="section-header">
                 <h2>Main Course Chapters</h2>
@@ -228,10 +230,10 @@
                 </div>
                 <div class="card">
                     <img src="images/chapters-icon-2.svg" alt="chapter 2">
-                    <h3>Setting Clear Strategies</h3>
+                    <h3>Content Creation Strategies</h3>
                     <p>
                         Dive into effective content creation strategies that resonate with 
-                        your audience.
+                        your audience
                     </p>
                 </div>
                 <div class="card">
@@ -243,9 +245,12 @@
                     </p>
                 </div>
             </div>
-            
         </div>
-      </section>
+    </section>
+
+    <!-- Course Summary -->
+     
+
     <script src="js/script.js"></script>
 </body>
 </html>
