--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
@@ -249,7 +249,32 @@
     </section>
 
     <!-- Course Summary -->
-     
+    <section class="summary" id="summary">
+        <div class="container">
+            <div class="section-heading">
+                <h2>Course Summary</h2>
+                <div class="heading-border"></div>
+            </div>
+            <div class="section-lists">
+                <div class="list">
+                    <div class="list-header">Setting Clear Objectives</div>
+                    <div class="list-item">
+                        1.1 Learn to set clear and achievable objectives for your video 
+                        projects, ensuring alignment with your overall goals.
+                    </div>
+                    <div class="list-item">
+                        1.2 Explore strategies for defining specific objectives that guide the 
+                        direction of your project and facititate success.
+                    </div>
+                    <div class="list-item">
+                        1.3 Understand the importance of setting measurable objectives to 
+                        evaluate the effectiveness of your video content.
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="js/script.js"></script>
 </body>
