--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
@@ -251,11 +251,44 @@
     <!-- Course Summary -->
     <section class="summary" id="summary">
         <div class="container">
-            <div class="section-heading">
+            <div class="section-header">
                 <h2>Course Summary</h2>
                 <div class="heading-border"></div>
             </div>
             <div class="section-lists">
+                <div class="list">
+                    <div class="list-header">Setting Clear Objectives</div>
+                    <div class="list-item">
+                        1.1 Learn to set clear and achievable objectives for your video 
+                        projects, ensuring alignment with your overall goals.
+                    </div>
+                    <div class="list-item">
+                        1.2 Explore strategies for defining specific objectives that guide the 
+                        direction of your project and facititate success.
+                    </div>
+                    <div class="list-item">
+                        1.3 Understand the importance of setting measurable objectives to 
+                        evaluate the effectiveness of your video content.
+                    </div>
+                </div>
+
+                <div class="list">
+                    <div class="list-header">Setting Clear Objectives</div>
+                    <div class="list-item">
+                        1.1 Learn to set clear and achievable objectives for your video 
+                        projects, ensuring alignment with your overall goals.
+                    </div>
+                    <div class="list-item">
+                        1.2 Explore strategies for defining specific objectives that guide the 
+                        direction of your project and facititate success.
+                    </div>
+                    <div class="list-item">
+                        1.3 Understand the importance of setting measurable objectives to 
+                        evaluate the effectiveness of your video content.
+                    </div>
+
+                </div>
+
                 <div class="list">
                     <div class="list-header">Setting Clear Objectives</div>
                     <div class="list-item">
