Add Text Classes

--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
@@ -330,7 +330,28 @@
                 </ul>
             </div>
         </div>
-     </section>
+    </section>
+
+    <!-- Takeaways -->
+    <section class="takeaways section" id="takeaways">
+        <div class="container">
+            <div class="section-header">
+                <h2>Key Takeaways</h2>
+                <div class="heading-border"></div>
+                <p>
+                    This section highlights some of the key insights and learnings you'll gain the course.  Take a look at what can expect to achieve.
+                </p>
+            </div>
+            <div class="takeaway-cards">
+                <div class="card">
+                    <i class="fas fa-rocket fa-3x text-primary"></i>
+                    <p>
+                        <strong>Enhanced Skills</strong> - Develop advanced skills in web design and development
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="js/script.js"></script>
 </body>
