Add Takeaways styling

--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
@@ -342,7 +342,7 @@
                     This section highlights some of the key insights and learnings you'll gain the course.  Take a look at what can expect to achieve.
                 </p>
             </div>
-            <div class="takeaway-cards">
+            <div class="takeaways-cards">
                 <div class="card">
                     <i class="fas fa-rocket fa-3x text-primary"></i>
                     <p>
