Add Course Details

--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
@@ -353,6 +353,18 @@
         </div>
     </section>
 
+    <!-- Course Details -->
+     <section class="details section" id="details">
+        <div class="container">
+            <img src="images/details.png" alt="details">
+            <div class="details-content"></div>
+            <p>
+                Gain insight into the course curriculum, structure, and what to expect throughout you learning journey.
+            </p>
+            <a href="#" class="btn"></a>
+        </div>
+     </section>
+
     <script src="js/script.js"></script>
 </body>
 </html>
