Add Takeaways complete

--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
@@ -349,6 +349,41 @@
                         <strong>Enhanced Skills</strong> - Develop advanced skills in web design and development
                     </p>
                 </div>
+                <div class="card">
+            <i class="fas fa-globe fa-3x text-primary"></i>
+            <p>
+              <strong>Global Perspective</strong> - Gain insights into industry
+              trends and best practices
+            </p>
+          </div>
+          <div class="card">
+            <i class="fas fa-cloud fa-3x text-primary"></i>
+            <p>
+              <strong>Cloud Technology</strong> - Explore the latest cloud
+              technologies and tools
+            </p>
+          </div>
+          <div class="card">
+            <i class="fas fa-user fa-3x text-primary"></i>
+            <p>
+              <strong>Networking </strong> - Connect with fellow professionals
+              and expand your network
+            </p>
+          </div>
+          <div class="card">
+            <i class="fas fa-cog fa-3x text-primary"></i>
+            <p>
+              <strong>Problem-Solving</strong> - Enhance your problem-solving
+              abilities and critical thinking skills
+            </p>
+          </div>
+          <div class="card">
+            <i class="fas fa-server fa-3x text-primary"></i>
+            <p>
+              <strong>Technical Proficiency</strong> - Improve your technical
+              proficiency and stay ahead in the digital landscape.
+            </p>
+          </div>
             </div>
         </div>
     </section>
