Add Course Details

--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
@@ -392,11 +392,14 @@
      <section class="details section" id="details">
         <div class="container">
             <img src="images/details.png" alt="details">
-            <div class="details-content"></div>
-            <p>
-                Gain insight into the course curriculum, structure, and what to expect throughout you learning journey.
-            </p>
-            <a href="#" class="btn"></a>
+            <div class="details-content">
+                <h2>Course Details</h2>
+                <div class="heading-border"></div>
+                <p>
+                    Gain insight into the course curriculum, structure, and what to expect throughout you learning journey.
+                </p>
+                <a href="#" class="btn">See Details</a>
+            </div>
         </div>
      </section>
 
