Add Author Details

--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
@@ -390,7 +390,7 @@
 
     <!-- Course Details -->
      <section class="details section" id="details">
-        <div class="container">
+        <div class="container details-flex">
             <img src="images/details.png" alt="details">
             <div class="details-content">
                 <h2>Course Details</h2>
@@ -398,6 +398,32 @@
                 <p>
                     Gain insight into the course curriculum, structure, and what to expect throughout you learning journey.
                 </p>
+                <a href="#" class="btn">See Details</a>
+            </div>
+        </div>
+     </section>
+
+    <!-- Author Info -->
+     <section class="details section" id="author">
+        <div class="container details-flex">
+            <img src="images/author.png" alt="details">
+            <div class="details-content">
+                <h2>Author Information</h2>
+                <div class="heading-border"></div>
+                <p>
+                    Learn about the author's background, expertise, and contributions to the course content.
+                </p>
+                <ul>
+                    <li>
+                        <i class="fas fa-chevron-circle-right text-primary"></i><strong>Experise</strong> Lorem ipsum dolor sit amet consectetur.
+                    </li>
+                    <li>
+                        <i class="fas fa-chevron-circle-right text-primary"></i><strong>Experience</strong> Lorem ipsum dolor sit amet consectetur.
+                    </li>
+                    <li>
+                        <i class="fas fa-chevron-circle-right text-primary"></i><strong>Skills</strong> Lorem ipsum dolor sit amet consectetur.
+                    </li>
+                </ul>
                 <a href="#" class="btn">See Details</a>
             </div>
         </div>
