Add Stats and Newsletter

--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./CSS/styles.css">
     <title>(HJ) Welcome To Tutor (HJ)</title>
 </head>
@@ -426,6 +427,51 @@
                 </ul>
                 <a href="#" class="btn">See Details</a>
             </div>
+        </div>
+     </section>
+
+    <!-- Stats -->
+    <section class="stats section" id="stats">
+        <div class="container stats-flex">
+            <img src="images/stats.png" alt="stats">
+            <div class="stats-content">
+                <div class="stats-numbers">
+                    <div>
+                        <h3>2000+</h3>
+                        <p>Happy Users</p>
+                    </div>
+                    <div>
+                        <h3>358</h3>
+                        <p>Issues Solved</p>
+                    </div>
+                    <div>
+                        <h3>980</h3>
+                        <p>Good Reviews</p>
+                    </div>
+                    <div>
+                        <h3>216</h3>
+                        <p>Case Studies</p>
+                    </div>
+                </div>
+                <p class="stats-text">
+                    Tutor is probably one of the best video courses on landing page making in the web industry
+                </p>
+                <a href="#" class="btn">Get The Course</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Newsletter -->
+     <section class="newsletter section" id="newsletter">
+        <div class="container newsletter-flex">
+            <h2>Subscribe To Our Newsletter</h2>
+            <p>
+                Stay updated with the latest news, offers, and insights from our platform. Join our newsletter community today!
+            </p>
+            <form>
+                <input type="email" name="email" id="email" placeholder="Enter Your Email" required>
+                <button type="submit" class="btn">Subscribe</button>
+            </form>
         </div>
      </section>
 
