--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/contact.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/contact.html
@@ -91,389 +91,41 @@
         </div>
     </nav>
 
-    <!-- Hero -->
-     <header class="hero">
-        <div class="container hero-flex">
-            <div class="hero-content">
-                <h1>Create Your Own Video Courses</h1>
-                <p>
-                    Dive deep into the world of creativity and learn to stunning
-                    videos that captivate and inspire.
-                </p>
-                <a href="#" class="btn">$29 Get Course</a>
-            </div>
-            <img src="images/header-course.png" alt="hero">
+    <!-- Inner Header -->
+     <header class="inner-header">
+        <div class="container-sm">
+            Contact Us
         </div>
-        <svg
-        class="frame-decoration"
-        data-name="Layer 2"
-        xmlns="http://www.w3.org/2000/svg"
-        preserveAspectRatio="none"
-        viewBox="0 0 1920 192.275"
-      >
-        <defs>
-          <style>
-            .cls-1 {
-              fill: #ffffff;
-            }
-          </style>
-        </defs>
-        <title>frame-decoration</title>
-        <path
-          class="cls-1"
-          d="M0,158.755s63.9,52.163,179.472,50.736c121.494-1.5,185.839-49.738,305.984-49.733,109.21,0,181.491,51.733,300.537,50.233,123.941-1.562,225.214-50.126,390.43-50.374,123.821-.185,353.982,58.374,458.976,56.373,217.907-4.153,284.6-57.236,284.6-57.236V351.03H0V158.755Z"
-          transform="translate(0 -158.755)"
-        />
-      </svg>
      </header>
 
-    <!-- Learn Section -->
-    <section class="learn">
-        <div class="container">
-            <div class="section-header">
-                <h2>What will You Learn</h2>
-                <div class="heading-border"></div>
-                <p>Embark on a journey of learning with our comprehensive video courses.
-                    Discover the secrets of successful video creation and enhance 
-                    your skills.
-                </p>
-            </div>
-
-            <div class="topics">
-                <div class="topic">
-                    <div class="topic-image">
-                        <img src="images/description-1.jpg" alt="topic">
-                    </div>
-                    <div class="topic-text">
-                        <h3>Set Clear Objectives and Goals</h3>
-                    </div>
-                </div>
-                <div class="topic">
-                    <div class="topic-image">
-                        <img src="images/description-2.jpg" alt="alternative" />
-                    </div>
-                    <div class="topic-text">
-                        <h3>Plan Layout And Design Elements</h3>
-                    </div>
-                </div>
-                <div class="topic">
-                    <div class="topic-image">
-                        <img src="images/description-3.jpg" alt="alternative" />
-                    </div>
-                    <div class="topic-text">
-                        <h3>Sketch Creative Concepts</h3>
-                    </div>
-                </div>
-                <div class="topic">
-                    <div class="topic-image">
-                        <img src="images/description-4.jpg" alt="alternative" />
-                    </div>
-                    <div class="topic-text">
-                        <h3>Establish Strong Call-to-Actions</h3>
-                    </div>
-                </div>
-                <div class="topic">
-                    <div class="topic-image">
-                    <img src="images/description-5.jpg" alt="alternative" />
-                    </div>
-                    <div class="topic-text">
-                    <h3>Choose High-Quality HTML Templates</h3>
-                    </div>
-                </div>
-                <div class="topic">
-                    <div class="topic-image">
-                        <img src="images/description-6.jpg" alt="alternative" />
-                    </div>
-                    <div class="topic-text">
-                        <h3>Create Impressive Layout Previews</h3>
-                    </div>
-                </div>
-                <div class="topic">
-                    <div class="topic-image">
-                        <img src="images/description-7.jpg" alt="alternative" />
-                    </div>
-                    <div class="topic-text">
-                        <h3>Master Landing Page Coding Techniques</h3>
-                    </div>
-                </div>
-                <div class="topic">
-                    <div class="topic-image">
-                        <img src="images/description-8.jpg" alt="alternative" />
-                    </div>
-                    <div class="topic-text">
-                        <h3>Launch Your Project Successfully Online</h3>
-                    </div>
-                </div>
-            </div>         
-        </div>
-    </section>
-
-    <!-- Course Chapter Section -->
-    <section class="chapters section" id="chapters">
-        <div class="container" >
-            <div class="section-header">
-                <h2>Main Course Chapters</h2>
-                <div class="heading-border"></div>
-                <p>
-                    Explore the core concepts and Techniques covered in our video course.
-                    Each chapter is designed to equip you with essential skills for 
-                    video creation.
-                </p>
-            </div>
-            <div class="chapter-cards">
-                <div class="card">
-                    <img src="images/chapters-icon-1.svg" alt="chapter 1">
-                    <h3>Setting Clear Objectives</h3>
-                    <p>
-                        Learn how to define clear objectives and goals for your video 
-                        projects, ensuring focus and direction?
-                    </p>
-                </div>
-                <div class="card">
-                    <img src="images/chapters-icon-2.svg" alt="chapter 2">
-                    <h3>Content Creation Strategies</h3>
-                    <p>
-                        Dive into effective content creation strategies that resonate with 
-                        your audience
-                    </p>
-                </div>
-                <div class="card">
-                    <img src="images/chapters-icon-3.svg" alt="chapter 3">
-                    <h3>Coding Essentials</h3>
-                    <p>
-                        Explore the fundamental of coding for video projects, including HTML,
-                        CSS, and JavaScript
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Course Summary -->
-    <section class="summary" id="summary">
-        <div class="container">
-            <div class="section-header">
-                <h2>Course Summary</h2>
-                <div class="heading-border"></div>
-            </div>
-            <div class="section-lists">
-                <div class="list">
-                    <div class="list-header">Setting Clear Objectives</div>
-                    <div class="list-item">
-                        1.1 Learn to set clear and achievable objectives for your video 
-                        projects, ensuring alignment with your overall goals.
-                    </div>
-                    <div class="list-item">
-                        1.2 Explore strategies for defining specific objectives that guide the 
-                        direction of your project and facititate success.
-                    </div>
-                    <div class="list-item">
-                        1.3 Understand the importance of setting measurable objectives to 
-                        evaluate the effectiveness of your video content.
-                    </div>
-                </div>
-
-                <div class="list">
-                    <div class="list-header">Setting Clear Objectives</div>
-                    <div class="list-item">
-                        1.1 Learn to set clear and achievable objectives for your video 
-                        projects, ensuring alignment with your overall goals.
-                    </div>
-                    <div class="list-item">
-                        1.2 Explore strategies for defining specific objectives that guide the 
-                        direction of your project and facititate success.
-                    </div>
-                    <div class="list-item">
-                        1.3 Understand the importance of setting measurable objectives to 
-                        evaluate the effectiveness of your video content.
-                    </div>
-
-                </div>
-
-                <div class="list">
-                    <div class="list-header">Setting Clear Objectives</div>
-                    <div class="list-item">
-                        1.1 Learn to set clear and achievable objectives for your video 
-                        projects, ensuring alignment with your overall goals.
-                    </div>
-                    <div class="list-item">
-                        1.2 Explore strategies for defining specific objectives that guide the 
-                        direction of your project and facititate success.
-                    </div>
-                    <div class="list-item">
-                        1.3 Understand the importance of setting measurable objectives to 
-                        evaluate the effectiveness of your video content.
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Info -->
-     <section>
-        <div class="info-container">
-            <div class="info-left"></div>
-            <div class="info-content">
-                <h2>Who Is This Course For?</h2>
-                <p>
-                    This course is designed for individuals seeking to enchance their
-                    skills and knowledge in web design, development, and digit marketing.
-                    Whether you are a seasoned web designer, a budding web developer or
-                    a marketing professional looking to expand your skill set.
-                </p>
-                <ul>
-                    <li><i class="fas fa-check"></i>Web Designers</li>
-                    <li><i class="fas fa-check"></i>Web Developers</li>
-                    <li><i class="fas fa-check"></i>Marketing Professional</li>
-                    <li><i class="fas fa-check"></i>Entrepreneurs</li>
-                    <li><i class="fas fa-check"></i>Business Owners</li>
-                </ul>
-            </div>
-        </div>
-    </section>
-
-    <!-- Takeaways -->
-    <section class="takeaways section" id="takeaways">
-        <div class="container">
-            <div class="section-header">
-                <h2>Key Takeaways</h2>
-                <div class="heading-border"></div>
-                <p>
-                    This section highlights some of the key insights and learnings you'll gain the course.  Take a look at what can expect to achieve.
-                </p>
-            </div>
-            <div class="takeaways-cards">
-                <div class="card">
-                    <i class="fas fa-rocket fa-3x text-primary"></i>
-                    <p>
-                        <strong>Enhanced Skills</strong> - Develop advanced skills in web design and development
-                    </p>
-                </div>
-                <div class="card">
-            <i class="fas fa-globe fa-3x text-primary"></i>
+    <section class="contact-form section">
+        <div class="container-sm">
             <p>
-              <strong>Global Perspective</strong> - Gain insights into industry
-              trends and best practices
+                We love to create dependable business are solutions for small and medium sized word companies. Email our office using contact@website.com or call us using +123-456-7890
             </p>
-          </div>
-          <div class="card">
-            <i class="fas fa-cloud fa-3x text-primary"></i>
-            <p>
-              <strong>Cloud Technology</strong> - Explore the latest cloud
-              technologies and tools
-            </p>
-          </div>
-          <div class="card">
-            <i class="fas fa-user fa-3x text-primary"></i>
-            <p>
-              <strong>Networking </strong> - Connect with fellow professionals
-              and expand your network
-            </p>
-          </div>
-          <div class="card">
-            <i class="fas fa-cog fa-3x text-primary"></i>
-            <p>
-              <strong>Problem-Solving</strong> - Enhance your problem-solving
-              abilities and critical thinking skills
-            </p>
-          </div>
-          <div class="card">
-            <i class="fas fa-server fa-3x text-primary"></i>
-            <p>
-              <strong>Technical Proficiency</strong> - Improve your technical
-              proficiency and stay ahead in the digital landscape.
-            </p>
-          </div>
-            </div>
-        </div>
-    </section>
 
-    <!-- Course Details -->
-     <section class="details section" id="details">
-        <div class="container details-flex">
-            <img src="images/details.png" alt="details">
-            <div class="details-content">
-                <h2>Course Details</h2>
-                <div class="heading-border"></div>
-                <p>
-                    Gain insight into the course curriculum, structure, and what to expect throughout you learning journey.
-                </p>
-                <a href="#" class="btn">See Details</a>
-            </div>
-        </div>
-     </section>
-
-    <!-- Author Info -->
-     <section class="details section" id="author">
-        <div class="container details-flex">
-            <img src="images/author.png" alt="details">
-            <div class="details-content">
-                <h2>Author Information</h2>
-                <div class="heading-border"></div>
-                <p>
-                    Learn about the author's background, expertise, and contributions to the course content.
-                </p>
-                <ul>
-                    <li>
-                        <i class="fas fa-chevron-circle-right text-primary"></i><strong>Experise</strong> Lorem ipsum dolor sit amet consectetur.
-                    </li>
-                    <li>
-                        <i class="fas fa-chevron-circle-right text-primary"></i><strong>Experience</strong> Lorem ipsum dolor sit amet consectetur.
-                    </li>
-                    <li>
-                        <i class="fas fa-chevron-circle-right text-primary"></i><strong>Skills</strong> Lorem ipsum dolor sit amet consectetur.
-                    </li>
-                </ul>
-                <a href="#" class="btn">See Details</a>
-            </div>
-        </div>
-     </section>
-
-    <!-- Stats -->
-    <section class="stats section" id="stats">
-        <div class="container stats-flex">
-            <img src="images/stats.png" alt="stats">
-            <div class="stats-content">
-                <div class="stats-numbers">
-                    <div>
-                        <h3>2000+</h3>
-                        <p>Happy Users</p>
-                    </div>
-                    <div>
-                        <h3>358</h3>
-                        <p>Issues Solved</p>
-                    </div>
-                    <div>
-                        <h3>980</h3>
-                        <p>Good Reviews</p>
-                    </div>
-                    <div>
-                        <h3>216</h3>
-                        <p>Case Studies</p>
-                    </div>
-                </div>
-                <p class="stats-text">
-                    Tutor is probably one of the best video courses on landing page making in the web industry
-                </p>
-                <a href="#" class="btn">Get The Course</a>
-            </div>
-        </div>
-    </section>
-
-    <!-- Newsletter -->
-     <section class="newsletter section" id="newsletter">
-        <div class="container newsletter-flex">
-            <h2>Subscribe To Our Newsletter</h2>
-            <p>
-                Stay updated with the latest news, offers, and insights from our platform. Join our newsletter community today!
-            </p>
             <form>
-                <input type="email" name="email" id="email" placeholder="Enter Your Email" required>
-                <button type="submit" class="btn">Subscribe</button>
+                <input type="text" name="name" placeholder="Name">
+                <input type="email" name="email" placeholder="Email">
+                <textarea name="message" placeholder="Message"></textarea>
+                <button type="submit" class="btn">Send Message</button>
             </form>
         </div>
-     </section>
+    </section>
+
+    <!-- Location -->
+    <section class="location section">
+        <div class="container-sm">
+            <h2>Office Location</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus suscipit veniam et quae amet illum numquam adipisci, laborum laudantium reprehenderit quisquam necessitatibus quam explicabo ipsa sapiente qui repellendus non reiciendis.</p>
+            <div class="map">
+                <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1241.5303553091994!2d-0.14076024298621118!3d51.51210217963597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604d502268421%3A0x6a7d62889992f993!2sRegent+St%2C+Soho%2C+London+W1B+5TH%2C+UK!5e0!3m2!1sen!2sro!4v1476174541049"
+            allowfullscreen
+                ></iframe>
+            </div>
+        </div>
+    </section>
 
      <!-- Social -->
       <section class="social section">
