Add Accessibility to the Nav Menu

--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
@@ -12,9 +12,9 @@
     <title>(HJ) Welcome To Tutor (HJ)</title>
 </head>
 <body>
-    <nav class="navbar">
+    <nav class="navbar" role="navigation" aria-label="Main Navigation">
         <div class="navbar-flex container">
-            <img src="images/logo.svg" alt="Tutor">
+            <img src="images/logo.svg" alt="Tutor Logo">
             <div class="main-menu-items">
                 <ul class="main-menu-list">
                     <li>
