Add mobile menu items

--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/index.html
@@ -47,8 +47,45 @@
                     </li>
                 </ul>
             </div>
+
+            <!-- Mobile Menu & Hamburger -->
+            <div class="navbar__mobile-menu">
+                <div class="navbar__mobile-menu-toggle">
+                    <i class="fas fa-bars fa-2x"></i>
+                </div>
+                <!-- Mobile Menu Items -->
+                <div class="navbar__mobile-menu-items">
+                    <ul class="navbar__mobile-menu-list">
+                    <li class="navbar__mobile-menu-item">
+                        <a href="#" class="navbar__mobile-menu-link">Home</a>
+                    </li>
+                    <li class="navbar__mobile-menu-item">
+                        <a href="#features" class="navbar__mobile-menu-link">Features</a>
+                    </li>
+                    <li class="navbar__mobile-menu-item">
+                        <a href="#preview" class="navbar__mobile-menu-link">Preview</a>
+                    </li>
+                    <li class="navbar__mobile-menu-item">
+                        <a href="#details" class="navbar__mobile-menu-link">Details</a>
+                    </li>
+                    <li class="navbar__mobile-menu-item">
+                        <a href="#download" class="navbar__mobile-menu-link">Download</a>
+                    </li>
+                    <li class="navbar__mobile-menu-item">
+                        <a href="#" class="navbar__mobile-menu-link--primary">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li class="navbar__mobile-menu-item">
+                        <a href="#" class="navbar__mobile-menu-link--primary">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                    </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </navbar>
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
