Add Hero section beginning

--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- BEM class naming convention (Block, Elements, and Modifiers) -->
     <navbar class="navbar">
-        <div class="navbar__container">
+        <div class="navbar__container container">
             <div class="navbar__logo">
                 <img src="./images/logo.svg" alt="Leno">
             </div>
@@ -86,6 +86,9 @@
             </div>
         </div>
     </navbar>
+
+    <!-- Hero -->
+
     <script src="./js/script.js"></script>
 </body>
 </html>
