--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/index.html
@@ -88,7 +88,30 @@
     </navbar>
 
     <!-- Hero -->
-
+    <header class="hero">
+        <div class="hero__container container">
+            <div class="hero__content">
+                <h1 class="hero__title">
+                    Your
+                    <span class="hero__title--primary">productivity</span> assistant
+                </h1>
+                <p class="hero__description">
+                    Boost your productivity and improve your health with Leno -- the all-in-one app for developers and creators.
+                </p>
+                <div class="hero__buttons">
+                    <a href="#download" class="hero__button btn">
+                        <i class="fa-brands fa-apple"></i> For Apple
+                    </a>
+                    <a href="#download" class="hero__button btn">
+                        <i class="fa-brands fa-android"></i> For Android
+                    </a>
+                </div>
+            </div>
+            <div class="hero__image">
+                <img src="./images/header-smartphones.png" alt="Leno App">
+            </div>
+        </div>
+    </header>
     <script src="./js/script.js"></script>
 </body>
 </html>
