--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/index.html
@@ -273,6 +273,27 @@
         </div>
     </section>
 
+    <!-- Preview -->
+    <section class="preview" id="preview">
+        <div class="preview__container container">
+            <div class="preview__content">
+                <h2 class="preview__title">Preview</h2>
+                <p class="preview__description">Take a sneak peek at Leno's sleek and intuitive interface: 
+                </p>
+                <div class="preview__image-container">
+                    <div class="preview__video-wrapper">
+                        <img src="./images/video-frame.jpg" alt="preview">
+                        <button class="preview__video-button">
+                            <span class="preview__video-play-button">
+                                <span>Play</span>
+                            </span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="./js/script.js"></script>
 </body>
 </html>
