Add video preview section design play button

--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/index.html
@@ -273,6 +273,23 @@
         </div>
     </section>
 
+
+    <!-- Modal -->
+    <div class="modal" id="videoModal">
+        <div class="modal__content">
+            <span class="modal__close-button">&times;</span>
+            <iframe 
+            src="" 
+            frameborder="0" 
+            id="videoPlayer" 
+            width="560" 
+            height="315" 
+            frameborder="0" 
+            allowfullscreen
+            ></iframe>
+        </div>
+    </div>
+
     <!-- Preview -->
     <section class="preview" id="preview">
         <div class="preview__container container">
