Add Details Area

--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/index.html
@@ -311,6 +311,28 @@
         </div>
     </section>
 
+    <!-- Details -->
+    <section class="details" id="details">
+        <div class="details__container container">
+            <div class="details__grid">
+                <!-- Grid Item 1 -->
+                <div class="details_grid-image">
+                    <img src="./images/details-1.png" alt="Leno App">
+                </div>
+                <!-- Grid Item 2 -->
+                <div class="details__grid-content">
+                    <h3 class="details__grid-heading">
+                        Start using Leno today and set your long term goals
+                    </h3>
+                    <p class="details__grid-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, velit eos aliquid veritatis ratione vel qui laudantium deserunt similique. Quidem, earum vitae architecto non rerum sequi debitis recusandae autem aliquid.
+                    </p>
+                    <a href="details.html" class="details__grid-button btn">More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="./js/script.js"></script>
 </body>
 </html>
