Add Details Area Icons

--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/index.html
@@ -329,7 +329,52 @@
                     </p>
                     <a href="details.html" class="details__grid-button btn">More</a>
                 </div>
+                <!-- Grid Item 3 -->
+                <div class="details__grid-content">
+                    <h3 class="details__grid-heading">
+                        The calender feature helps you schedule tasks
+                    </h3>
+                    <p class="details__grid-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, velit eos aliquid veritatis ratione vel qui laudantium deserunt similique. Quidem, earum vitae architecto non rerum sequi debitis recusandae autem aliquid.
+                    </p>
+                    <a href="details.html" class="details__grid-button btn">More</a>
+                </div>
+
+                <!-- Grid Item 4 -->
+                <div class="details__grid-image">
+                    <img src="/images/details-2.png" alt="Leno App">
+                </div>
             </div>
+
+            <!-- Icons -->
+            <div class="details__icons">
+                <div class="details__icons-item">
+                    <i class="fas fa-users fa-4x"></i>
+                    <div class="details__icons-amount">55,000</div>
+                    <h4 class="details__icons-tite">Happy Customers</h4>
+                </div>
+                <div class="details__icons-item">
+                    <i class="fas fa-code fa-4x"></i>
+                    <div class="details__icons-amount">585</div>
+                    <h4 class="details__icons-title">Issues Solved</h4>
+                </div>
+                <div class="details__icons-item">
+                    <i class="fas fa-comments fa-4x"></i>
+                    <div class="details__icons-amount">788</div>
+                    <h4 class="details__icons-title">Good Reviews</h4>
+                </div>
+                <div class="details__icons-item">
+                    <i class="fas fa-rocket fa-4x"></i>
+                    <div class="details__icons-amount">100</div>
+                    <h4 class="details__icons-title">Case Studies</h4>
+                </div>
+                <div class="details__icons-item">
+                    <i class="fas fa-edit fa-4x"></i>
+                    <div class="details__icons-amount">110</div>
+                    <h4 class="details__icons-title">Press Article</h4>
+                </div>
+            </div>
+
         </div>
     </section>
 
