--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/index.html
@@ -378,6 +378,21 @@
         </div>
     </section>
 
+    <section class="screenshots" id="screenshots">
+        <div class="screenshots_container container">
+            <div class="screenshots__content">
+                <h2 class="screenshots__title">Screenshots</h2>
+                <div class="screenshots__images">
+                    <img src="./images/screenshot-1.png" alt="Screenshots">
+                    <img src="./images/screenshot-2.png" alt="Screenshots">
+                    <img src="./images/screenshot-3.png" alt="Screenshots">
+                    <img src="./images/screenshot-4.png" alt="Screenshots">
+                    <img src="./images/screenshot-5.png" alt="Screenshots">
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="./js/script.js"></script>
 </body>
 </html>
