--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/index.html
@@ -393,6 +393,28 @@
         </div>
     </section>
 
+    <!-- Download -->
+    <section class="download" id="download">
+        <div class="download__container container">
+            <div class="download_content">
+                <p class="download__description">
+                    Download Leno today to see the benefits and enjoy the results faster than any other app out there
+                </p>
+                <div class="download__buttons">
+                    <a href="details.html" class="download__button btn">
+                        <i class="fa-brands fa-apple"></i> For Apple
+                    </a>
+                    <a href="details.html" class="download__button btn">
+                        <i class="fa-brands fa-android"></i> For Android
+                    </a>
+                </div>
+            </div>
+            <div class="download__image">
+                <img src="./images/download.png" alt="Download">
+            </div>
+        </div>
+    </section>
+
     <script src="./js/script.js"></script>
 </body>
 </html>
