--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/index.html
@@ -414,6 +414,17 @@
         </div>
     </section>
 
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer__container container">
+            <div class="footer__about">
+                <h4 class="footer__title">About Leno</h4>
+                <p class="footer__description">
+                    Leno is a mobile app that helps you stay focused and improve your productivity.  The app provides you with tools to set goals, track you prograss, and maintain a healthy work-life balance.
+                </p>
+            </div>
+        </div>
+    </footer>
     <script src="./js/script.js"></script>
 </body>
 </html>
