Add details page with prices

--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/details.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/details.html
@@ -95,6 +95,111 @@
     </header>
 
     <!-- Pricing -->
+    <section class="pricing">
+        <div class="pricing__container container">
+            <h2 class="pricing__title">Pricing Options</h2>
+            <div class="pricing__cards">
+                <!-- Card 1 -->
+                <div class="pricing__card">
+                    <div class="pricing__card-box">
+                        <h4 class="pricing__card-title">Standard</h4>
+                        <h3 class="pricing__card-price">Free</h3>
+                    </div>
+                    <div class="pricing__card-body">
+                        <ul class="pricing__card-list">
+                            <li class="pricing__card-item">
+                                <i class="fas fa-check">
+                                    Unlimited access to all features
+                                </i>
+                            </li>
+                            <li class="pricing__card-item">
+                                <i class="fas fa-check">
+                                    24/7 Customer Support
+                                </i>
+                            </li>
+                            <li class="pricing__card-item">
+                                <i class="fas fa-check">
+                                    1GB Storage
+                                </i>
+                            </li>
+                            <li class="pricing__card-item">
+                                <i class="fas fa-check">
+                                    Cancel Anytime
+                                </i>
+                            </li>
+                        </ul>
+                    </div>
+                    <a href="#" class="pricing__card-button btn">Get Started</a>
+                </div>
+                <!-- Card 2 -->
+                <div class="pricing__card">
+                    <div class="pricing__card-box">
+                        <h4 class="pricing__card-title">Advanced</h4>
+                        <h3 class="pricing__card-price">$19</h3>
+                    </div>
+                    <div class="pricing__card-body">
+                        <ul class="pricing__card-list">
+                            <li class="pricing__card-item">
+                                <i class="fas fa-check">
+                                    Unlimited access to all features
+                                </i>
+                            </li>
+                            <li class="pricing__card-item">
+                                <i class="fas fa-check">
+                                    24/7 Customer Support
+                                </i>
+                            </li>
+                            <li class="pricing__card-item">
+                                <i class="fas fa-check">
+                                    5GB Storage
+                                </i>
+                            </li>
+                            <li class="pricing__card-item">
+                                <i class="fas fa-check">
+                                    Cancel Anytime
+                                </i>
+                            </li>
+                        </ul>
+                    </div>
+                    <a href="#" class="pricing__card-button btn">Get Started</a>
+                </div>
+                <!-- Card 1 -->
+                <div class="pricing__card">
+                    <div class="pricing__card-box">
+                        <h4 class="pricing__card-title">Complete</h4>
+                        <h3 class="pricing__card-price">$29</h3>
+                    </div>
+                    <div class="pricing__card-body">
+                        <ul class="pricing__card-list">
+                            <li class="pricing__card-item">
+                                <i class="fas fa-check">
+                                    Unlimited access to all features
+                                </i>
+                            </li>
+                            <li class="pricing__card-item">
+                                <i class="fas fa-check">
+                                    24/7 Customer Support
+                                </i>
+                            </li>
+                            <li class="pricing__card-item">
+                                <i class="fas fa-check">
+                                    10GB Storage
+                                </i>
+                            </li>
+                            <li class="pricing__card-item">
+                                <i class="fas fa-check">
+                                    Cancel Anytime
+                                </i>
+                            </li>
+                        </ul>
+                    </div>
+                    <a href="#" class="pricing__card-button btn">Get Started</a>
+                </div>
+                
+            </div>
+        </div>
+    </section>
+
 
     <!-- Footer -->
     <footer class="footer">
