--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/details.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/details.html
@@ -96,107 +96,108 @@
 
     <!-- Pricing -->
     <section class="pricing">
-        <div class="pricing__container container">
-            <h2 class="pricing__title">Pricing Options</h2>
-            <div class="pricing__cards">
-                <!-- Card 1 -->
-                <div class="pricing__card">
-                    <div class="pricing__card-box">
-                        <h4 class="pricing__card-title">Standard</h4>
-                        <h3 class="pricing__card-price">Free</h3>
-                    </div>
-                    <div class="pricing__card-body">
-                        <ul class="pricing__card-list">
-                            <li class="pricing__card-item">
-                                <i class="fas fa-check">
-                                    Unlimited access to all features
-                                </i>
-                            </li>
-                            <li class="pricing__card-item">
-                                <i class="fas fa-check">
-                                    24/7 Customer Support
-                                </i>
-                            </li>
-                            <li class="pricing__card-item">
-                                <i class="fas fa-check">
-                                    1GB Storage
-                                </i>
-                            </li>
-                            <li class="pricing__card-item">
-                                <i class="fas fa-check">
-                                    Cancel Anytime
-                                </i>
-                            </li>
-                        </ul>
-                    </div>
-                    <a href="#" class="pricing__card-button btn">Get Started</a>
-                </div>
-                <!-- Card 2 -->
-                <div class="pricing__card">
-                    <div class="pricing__card-box">
-                        <h4 class="pricing__card-title">Advanced</h4>
-                        <h3 class="pricing__card-price">$19</h3>
-                    </div>
-                    <div class="pricing__card-body">
-                        <ul class="pricing__card-list">
-                            <li class="pricing__card-item">
-                                <i class="fas fa-check">
-                                    Unlimited access to all features
-                                </i>
-                            </li>
-                            <li class="pricing__card-item">
-                                <i class="fas fa-check">
-                                    24/7 Customer Support
-                                </i>
-                            </li>
-                            <li class="pricing__card-item">
-                                <i class="fas fa-check">
-                                    5GB Storage
-                                </i>
-                            </li>
-                            <li class="pricing__card-item">
-                                <i class="fas fa-check">
-                                    Cancel Anytime
-                                </i>
-                            </li>
-                        </ul>
-                    </div>
-                    <a href="#" class="pricing__card-button btn">Get Started</a>
-                </div>
-                <!-- Card 1 -->
-                <div class="pricing__card">
-                    <div class="pricing__card-box">
-                        <h4 class="pricing__card-title">Complete</h4>
-                        <h3 class="pricing__card-price">$29</h3>
-                    </div>
-                    <div class="pricing__card-body">
-                        <ul class="pricing__card-list">
-                            <li class="pricing__card-item">
-                                <i class="fas fa-check">
-                                    Unlimited access to all features
-                                </i>
-                            </li>
-                            <li class="pricing__card-item">
-                                <i class="fas fa-check">
-                                    24/7 Customer Support
-                                </i>
-                            </li>
-                            <li class="pricing__card-item">
-                                <i class="fas fa-check">
-                                    10GB Storage
-                                </i>
-                            </li>
-                            <li class="pricing__card-item">
-                                <i class="fas fa-check">
-                                    Cancel Anytime
-                                </i>
-                            </li>
-                        </ul>
-                    </div>
-                    <a href="#" class="pricing__card-button btn">Get Started</a>
-                </div>
-                
+      <div class="pricing__container container">
+        <h2 class="pricing__title">Pricing Options</h2>
+        <div class="pricing__cards">
+          <!-- Card 1 -->
+          <div class="pricing__card">
+            <div class="pricing__card-box">
+              <h4 class="pricing__card-title">Standard</h4>
+              <h3 class="pricing__card-price">Free</h3>
+              <div class="pricing__card-body">
+                <ul class="pricing__card-list">
+                  <li class="pricing__card-item">
+                    <i class="fas fa-check"></i> Unlimited access to all
+                    features
+                  </li>
+                  <li class="pricing__card-item">
+                    <i class="fas fa-check"></i>
+                    24/7 Customer Support
+                  </li>
+                  <li class="pricing__card-item">
+                    <i class="fas fa-check"></i>
+                    1GB Storage
+                  </li>
+                  <li class="pricing__card-item">
+                    <i class="fas fa-check"></i>
+                    Cancel Anytime
+                  </li>
+                </ul>
+              </div>
             </div>
+            <a href="#" class="pricing__card-button btn">Get Started</a>
+          </div>
+
+          <!-- Card 2 -->
+          <div class="pricing__card">
+            <div class="pricing__card-box">
+              <h4 class="pricing__card-title">Advanced</h4>
+              <h3 class="pricing__card-price">$19</h3>
+              <div class="pricing__card-body">
+                <ul class="pricing__card-list">
+                  <li class="pricing__card-item">
+                    <i class="fas fa-check"></i> Unlimited access to all
+                    features
+                  </li>
+                  <li class="pricing__card-item">
+                    <i class="fas fa-check"></i>
+                    24/7 Customer Support
+                  </li>
+                  <li class="pricing__card-item">
+                    <i class="fas fa-check"></i>
+                    5GB Storage
+                  </li>
+                  <li class="pricing__card-item">
+                    <i class="fas fa-check"></i>
+                    Cancel Anytime
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <a href="#" class="pricing__card-button btn">Get Started</a>
+          </div>
+
+          <!-- Card 3 -->
+          <div class="pricing__card">
+            <div class="pricing__card-box">
+              <h4 class="pricing__card-title">Complete</h4>
+              <h3 class="pricing__card-price">$29</h3>
+              <div class="pricing__card-body">
+                <ul class="pricing__card-list">
+                  <li class="pricing__card-item">
+                    <i class="fas fa-check"></i> Unlimited access to all
+                    features
+                  </li>
+                  <li class="pricing__card-item">
+                    <i class="fas fa-check"></i>
+                    24/7 Customer Support
+                  </li>
+                  <li class="pricing__card-item">
+                    <i class="fas fa-check"></i>
+                    10GB Storage
+                  </li>
+                  <li class="pricing__card-item">
+                    <i class="fas fa-check"></i>
+                    Cancel Anytime
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <a href="#" class="pricing__card-button btn">Get Started</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- Pricing Notes -->
+    <section class="pricing-notes">
+        <div class="pricing-notes__container container">
+            <p class="pricing-notes__text">
+                * Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed, labore.
+            </p>
+            <p class="pricing-notes__text">* Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus facere sint illum fugiat ut enim.</p>
+            <p class="pricing-notes__text">* Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed, labore.</p>
         </div>
     </section>
 
