Add Details section part 1

--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/details.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/details.html
@@ -202,6 +202,27 @@
     </section>
 
 
+    <!-- Details Features -->
+    <section class="details-features">
+        <div class="details-features__container container">
+            <h2 class="details-features__title">Features</h2>
+            <div class="details-features__list">
+                <!-- Item 1 -->
+                <div class="details-features__list-item">
+                    <i class="fas fa-rocket fa-4x"></i>
+                    <div class="details-features__list-text">
+                        <h3 class="details-features__list-title">
+                            Real-Time Data
+                        </h3>
+                        <p class="details-features__list-description">
+                            Access real-time data instantly, ensuring you're always up-to-date with the lastest information.  Whether it's market trends, user activity, or system performance metrics, stay informed with our real-time with our real-time data solutions.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="footer__container container">
