Add Details section part 2

--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/details.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/details.html
@@ -219,6 +219,42 @@
                         </p>
                     </div>
                 </div>
+                <!-- Item 2 -->
+                <div class="details-features__list-item">
+                    <i class="fas fa-user fa-4x"></i>
+                    <div class="details-features__list-text">
+                        <h3 class="details-features__list-title">
+                            Simple Integration
+                        </h3>
+                        <p class="details-features__list-description">
+                            Integrate our solutions Seamlessly into your existing workflow with minimal effort.  Our easy-to-use APIs and intuitive documentaion make integration a breeze, allowing you to focus on what matters most - delivering value to your users.
+                        </p>
+                    </div>
+                </div>
+                <!-- Item 3 -->
+                <div class="details-features__list-item">
+                    <i class="fas fa-code fa-4x"></i>
+                    <div class="details-features__list-text">
+                        <h3 class="details-features__list-title">
+                            Easy to Use
+                        </h3>
+                        <p class="details-features__list-description">
+                            Access real-time data instantly, ensuring you're always up-to-date with the lastest information.  Whether it's market trends, user activity, or system performance metrics, stay informed with our real-time with our real-time data solutions.
+                        </p>
+                    </div>
+                </div>
+                <!-- Item 4 -->
+                <div class="details-features__list-item">
+                    <i class="fas fa-compass fa-4x"></i>
+                    <div class="details-features__list-text">
+                        <h3 class="details-features__list-title">
+                            High Accuracy
+                        </h3>
+                        <p class="details-features__list-description">
+                            Access real-time data instantly, ensuring you're always up-to-date with the lastest information.  Whether it's market trends, user activity, or system performance metrics, stay informed with our real-time with our real-time data solutions.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
